--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/owl.carousel.scss">
+    <link rel="stylesheet" href="css/owl.theme.default.scss">
 
     <!-- script
    ================================================== -->
@@ -72,11 +74,9 @@
         <div class="home-content">
 
             <div class="row contents">
-                <div class="header-logo-over" data-aos="fade-up">
-                </div>
                 <div class="home-content-left">
                     <h1 data-aos="fade-up">
-                        Direito Tributário
+                        Advocacia Tributária
                     </h1>
                     <div class="buttons" data-aos="fade-up">
                         <a href="#contact" class="smoothscroll button stroke">
@@ -151,82 +151,128 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <section id="revisaMT">
         <div class="row about-features">
-            <h1 class="intro-header" data-aos="fade-up">Áreas de Atuação</h1>
-
             <div class="features-list block-1-3 block-m-1-2 block-mob-full group">
-
-                <div class="bgrid feature" data-aos="fade-up">
-
-                    <span class="icon"><i class="fa fa-balance-scale" aria-hidden="true"></i></span>
-
-                    <div class="service-content">
-
-                        <h3>Direito Tributário</h3>
-
-                        <p style="text-align: justify;">Suas principais atribuições são a consultoria e o planejamento tributário, que incluem orientação sobre a legislação tributária, desenvolvimento de estratégias para otimização fiscal e garantia de conformidade legal. No contencioso
-                            tributário, os advogados representam as empresas em processos administrativos e judiciais, defendendo contra autuações fiscais e impugnando cobranças indevidas.
-                        </p>
-
+                <div id="revisamt" class="capa2">
+                    <div class="bloco">
+                        <div class="img"><img src="http://c766d5c0.iphotel.info/imgsite/chamadas/revisamt.jpg" alt="Revisa MT"></div>
+                        <div class="tab">
+                            <div class="txt">
+                                <h2>Revisa MT</h2>
+                                <div class="texto html">Revisão de todos os débitos ICMS Mato Grosso<br>
+                                    <br> Desenvolvemos Tecnologia própria para diagnóstico dos valores cobrados a maior no ICMS MT.<br>
+                                    <br> &nbsp;
+                                    <ul class="arrowList">
+                                        <li>
+                                            Revisão Parcelamento Refis</li>
+                                        <li>
+                                            Revisão Certidão da Dívida Ativa (CDA)</li>
+                                        <li>
+                                            Revisão Execução Fiscal</li>
+                                        <li>
+                                            Revisão Conta Corrente Fiscal</li>
+                                        <li>
+                                            Revisão Todo Passivo Tributário ICMS</li>
+                                        <li>
+                                            Restituição Valores Pagos a Maior</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
                 </div>
-                <!-- /bgrid -->
-
-                <div class="bgrid feature" data-aos="fade-up">
-
-                    <span class="icon"><i class="fa fa-university"  aria-hidden="true"></i></span>
-
-                    <div class="service-content">
-                        <h3>Processo Judicial Tributário</h3>
-
-                        <p style="text-align: justify;">O processo judicial tributário é um mecanismo essencial para a defesa dos direitos dos contribuintes diante de possíveis abusos ou interpretações equivocadas da legislação tributária pelas autoridades fiscais. Envolve uma série
-                            de medidas judiciais destinadas a resguardar o direito do contribuinte ou a defendê-lo de cobranças já realizadas.
-                        </p>
-
-
-                    </div>
-
-                </div>
-                <div class="bgrid feature" data-aos="fade-up">
-
-                    <span class="icon"><i class="fa fa-university"  aria-hidden="true"></i></span>
-
-                    <div class="service-content">
-                        <h3>Auditoria fiscal</h3>
-
-                        <p style="text-align: justify;">A auditoria fiscal também é crucial, envolvendo a revisão detalhada de procedimentos fiscais, identificação de créditos tributários e due diligence em operações de fusões e aquisições para avaliar os impactos fiscais.
-                        </p>
-
-
-                    </div>
-
-                </div>
-                <!-- /bgrid -->
-
-                <div class="bgrid feature" data-aos="fade-up">
-
-                    <span class="icon"><i class="fa fa-gavel" aria-hidden="true"></i>
-                    </i></span>
-
-                    <div class="service-content">
-                        <h3>Processo Administrativo Tributário</h3>
-
-                        <p style="text-align: justify;">O Processo Administrativo é o melhor meio de discussão de uma demanda tributária, pois suspende de imediato a exigibilidade do crédito tributário, não tem custas judiciais e nem risco de sucumbência, além de ser julgado por órgão
-                            especializado exclusivamente em matéria tributária.
-                        </p>
-
-                    </div>
-
-                </div>
-                <!-- /bgrid -->
             </div>
             <!-- end features-list -->
 
         </div>
-        <!-- end about-how -->
     </section>
+
+
+    <section id="noticiaAdvg">
+        <div class="row about-intro">
+            <h1 class="intro-header aos-init aos-animate" data-aos="fade-up">Noticias</h1>
+            <!-- Set up your HTML -->
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="card-main">
+                        <div class="card-img">
+                            <img src="images/receitaFederal.png" alt="">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Receita libera hoje consulta a restituição do Imposto de Renda</h3>
+                            <p class="card-description">
+                                A partir das 10h de hoje (24), o contribuinte que entregou a Declaração do Imposto de Renda Pessoa Física até o fim de maio poderá acertar as contas com o Leão.<br> Nesse horário, a Receita Federal libera a consulta ao
+                                quarto dos cinco lotes de restituição de 2022. O lote também contempla restituições de anos anteriores.No próximo dia 31, a Receita depositará R$ 6 bilhões a 4.462.564 contribuintes.
+                            </p>
+                            <div class="card-date">
+                                <p class="date">22-22-2222</p>
+                                <p class="date">33-33-3333</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card-main">
+                        <div class="card-img">
+                            <img src="images/contrato2.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">RP Cursos Tributários</h3>
+                            <p class="card-description">
+                                Ricardo Piedade, advogado tributarista e palestrante, é especialista em execuções fiscais. Ele oferece cursos e mentorias para advogados interessados em se especializar nesta área, abordando desde a Lei 6830/80 <br>até
+                                técnicas práticas para desbloqueio de contas bancárias e defesa de bens em execuções fiscais​ </p>
+                            <div class="card-date">
+                                <p class="date">22-22-2222</p>
+                                <p class="date">33-33-3333</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card-main">
+                        <div class="card-img">
+                            <img src="/images/contrato1.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Consultoria Jurídica e Defesa Fiscal</h3>
+                            <p class="card-description">
+                                Muitos escritórios de advocacia especializados em direito tributário oferecem serviços de consultoria jurídica para ajudar empresas e indivíduos a se preparar e defender-se em casos de execução fiscal.<br> Esses serviços
+                                incluem análise de riscos, elaboração de defesas, e acompanhamento de processos administrativos e judiciais​
+                            </p>
+                            <div class="card-date">
+                                <p class="date">22-22-2222</p>
+                                <p class="date">33-33-3333</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card-main">
+                        <div class="card-img">
+                            <img src="/images/taxa.jpg" alt="">
+                        </div>
+                        <div class="card-content">
+                            <h3 class="card-title">Educação Continuada em Direito Tributário</h3>
+                            <a href="#" target="_blank">Link da Matéria</a>
+                            <p class="card-description">
+                                Vários cursos e workshops são oferecidos por especialistas em direito tributário, focando em execuções fiscais. <br> Esses programas educativos são destinados a advogados que buscam se especializar na área, aprendendo desde
+                                os aspectos legais até as estratégias de defesa prática em execuções fiscais​
+                            </p>
+                            <div class="card-date">
+                                <p class="date">22-22-2222</p>
+                                <p class="date">33-33-3333</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- end about -->
     <section id="perfilProfissional" class="Especialidades">
 
@@ -511,6 +557,7 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/owl.carousel.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16481627435"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
