--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="features-list block-1-3 block-m-1-2 block-mob-full group">
                 <div id="revisamt" class="capa2">
                     <div class="bloco">
-                        <div class="img"><img src="http://c766d5c0.iphotel.info/imgsite/chamadas/revisamt.jpg" alt="Revisa MT"></div>
+                        <div class="img"><img src="/images/revisamt.jpg" alt="Revisa MT"></div>
                         <div class="tab">
                             <div class="txt">
                                 <h2>Revisa MT</h2>
