--- a/index.html
+++ b/index.html
@@ -68,16 +68,13 @@
 
     <!-- home
    ================================================== -->
-    <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=1920 data-natural-height=900>
+    <section id="home" data-parallax="scroll" data-image-src="images/hero-bg2.jpg" data-natural-width=1920 data-natural-height=785>
 
         <div class="overlay"></div>
         <div class="home-content">
 
             <div class="row contents">
                 <div class="home-content-left">
-                    <h1 data-aos="fade-up">
-                        Advocacia Tributária
-                    </h1>
                     <div class="buttons" data-aos="fade-up">
                         <a href="#contact" class="smoothscroll button stroke">
                             <span class="icon-circle-down" aria-hidden="true"></span> Contato
