--- a/index.html
+++ b/index.html
@@ -565,6 +565,26 @@
         gtag('js', new Date());
 
         gtag('config', 'AW-16481627435');
+        $(document).ready(function() {
+            $(".owl-carousel").owlCarousel({
+                loop: true,
+                margin: 10,
+                nav: true,
+                navText: ["<", ">"],
+                dots: true, // Ativa os pontos de paginação
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 3
+                    },
+                    1000: {
+                        items: 5
+                    }
+                }
+            });
+        });
     </script>
     <script>
         ! function(f, b, e, v, n, t, s) {
