--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- home
    ================================================== -->
-    <section id="home" data-parallax="scroll" data-image-src="images/hero-bg2.jpg" data-natural-width=1920 data-natural-height=785>
+    <section id="home" data-parallax="scroll" data-image-src="images/hero-bg2.jpg" class="responsive-image" data-natural-width=1920 data-natural-height=785>
 
         <div class="overlay"></div>
         <div class="home-content">
@@ -282,6 +282,7 @@
             <div class="col-four">
                 <div class="col-eight">
                     <img class="imgProfissional" src="images/pic3.jpg" srcset="images/pic3.jpg 1x, images/pic3.jpg 2x" data-aos="fade-up">
+                    <br>
                     <span><strong>Advogado Processual</strong></span><br>
                     <span><strong>OAB/MT 7178-B</strong></span>
                 </div>
@@ -556,6 +557,7 @@
     <script src="js/main.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16481627435"></script>
+
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -584,6 +586,33 @@
                     }
                 }
             });
+        });
+        document.addEventListener("DOMContentLoaded", function() {
+            function changeImageSource() {
+                var parallaxSlider = document.querySelector('.parallax-slider');
+                if (!parallaxSlider) {
+                    console.error("Elemento com o ID 'parallax-slider' não encontrado.");
+                    return;
+                }
+
+                console.log("Largura da janela: " + window.innerWidth);
+
+                if (window.innerWidth <= 768) { // Exemplo de breakpoint para responsivo
+                    parallaxSlider.src = "images/canavarrosmobile.jpg";
+                    parallaxSlider.classList.add('responsive-image');
+                    console.log("Imagem de fundo alterada para a versão móvel.");
+                } else {
+                    parallaxSlider.src = "images/hero-bg2.jpg";
+                    parallaxSlider.classList.remove('responsive-image');
+                    console.log("Imagem de fundo alterada para a versão desktop.");
+                }
+            }
+
+            // Execute a função quando a página carregar
+            changeImageSource();
+
+            // Execute a função quando a janela for redimensionada
+            window.onresize = changeImageSource;
         });
     </script>
     <script>
